<resources>
    <string name="app_name">Student Report Card</string>
    <string name="action_settings">Settings</string>
    <string name="enter_student_detail">ENTER STUDENT DETAIL</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_student_class">Enter Student Class</string>
    <string name="enter_student_mark1">Enter Marks For 1st Subject</string>
    <string name="enter_student_mark2">Enter Marks For 2nd Subject</string>
    <string name="enter_student_mark3">Enter Marks For 3rd Subject</string>
    <string name="enter_student_mark4">Enter Marks For 4th Subject</string>
    <string name="enter_student_mark5">Enter Marks For 5th Subject</string>
    <string name="enter_student_roll_no">Enter student Roll No.</string>
    <string name="submit">Submit</string>
    <string name="name_error">Name can\'t be empty</string>
    <string name="class_error">Class name can\'t be empty</string>
    <string name="roll_error">Roll No can\'t be empty</string>
    <string name="sub1_empty">Please enter marks for Subject 1</string>
    <string name="sub1_error">Subject 1 marks cannot exceed 100</string>
    <string name="sub2_empty">Please enter marks for Subject 2</string>
    <string name="sub2_error">Subject 2 marks cannot exceed 100</string>
    <string name="sub3_empty">Please enter marks for Subject 3</string>
    <string name="sub3_error">Subject 3 marks cannot exceed 100</string>
    <string name="sub4_empty">Please enter marks for Subject 4</string>
    <string name="sub4_error">Subject 4 marks cannot exceed 100</string>
    <string name="sub5_empty">Please enter marks for Subject 5</string>
    <string name="sub5_error">Subject 5 marks cannot exceed 100</string>
    <string name="add_item_list">There are no Report Cards Please Add to View</string>
    <string name="add_student">Add Student</string>
    <string name="report_card">Report Card</string>
    <string name="scored">SCORED</string>
    <string name="passed">PASSED</string>
    <string name="failed">FAILED!</string>
    <string name="sub1">Subject 1 -  </string>
    <string name="sub2">Subject 2 -  </string>
    <string name="sub3">Subject 3 -  </string>
    <string name="sub4">Subject 4 -  </string>
    <string name="sub5">Subject 5 -  </string>
</resources>
